--- a/framework/src/css/main.scss
+++ b/framework/src/css/main.scss
@@ -10,6 +10,12 @@
 @import "components/banner";
 @import "components/grid";
 @import "components/card";
+@import "components/form";
+@import "components/tab";
+@import "components/event-link";
+@import "components/nav";
+@import "components/side-column";
+
 
 
 
